dnl Process this file with autoconf to produce a configure script

dnl ------------------------------------------------
dnl Initialization and Versioning
dnl ------------------------------------------------

AC_INIT(src/prs_server.c)
AM_INIT_AUTOMAKE(prs, 0.0.1)

AC_PROG_CC
AC_PROG_CPP

AM_PROG_LIBTOOL
PKG_PROG_PKG_CONFIG


dnl --------------------------------------------------
dnl Check for libraries
dnl --------------------------------------------------

AC_CHECK_LIBM
AC_CHECK_LIB(pthread, pthread_create,
    pthread_LIBS="-lpthread"
  ,
    AC_MSG_ERROR(could not find the pthread library)
  )
PKG_CHECK_MODULES(vorbis, vorbis)
PKG_CHECK_MODULES(vorbisfile, vorbisfile)
PKG_CHECK_MODULES(libxml2, libxml-2.0)
PKG_CHECK_MODULES(shout, shout)
PKG_CHECK_MODULES(libcurl, libcurl)

AC_CHECK_LIB(id3, ID3Tag_New,
    id3lib_LIBS="-lid3"
  ,
    AC_MSG_ERROR(could not find the id3 library)
  )

dnl MySQL configuration

MYSQL_CONFIG=`which mysql_config`
if test "x$MYSQL_CONFIG" = x ; then
  AC_CHECK_LIB(mysqlclient, mysql_init,
      mysql_libs="-lmysqlclient"
    ,
      AC_MSG_ERROR(could not find the mysqlclient library)
    )
else
  mysql_LIBS=`$MYSQL_CONFIG --libs`
  mysql_CFLAGS=`$MYSQL_CONFIG --cflags`
fi

dnl --------------------------------------------------
dnl Do substitutions
dnl --------------------------------------------------

AC_SUBST(LIBS)
AC_SUBST(pthread_LIBS)
AC_SUBST(vorbis_CFLAGS)
AC_SUBST(vorbis_LIBS)
AC_SUBST(vorbisfile_CFLAGS)
AC_SUBST(vorbisfile_LIBS)
AC_SUBST(libxml2_CFLAGS)
AC_SUBST(libxml2_LIBS)
AC_SUBST(shout_CFLAGS)
AC_SUBST(shout_LIBS)
AC_SUBST(libcurl_CFLAGS)
AC_SUBST(libcurl_LIBS)
AC_SUBST(id3lib_LIBS)
AC_SUBST(mysql_LIBS)
AC_SUBST(mysql_CFLAGS)

AC_OUTPUT(Makefile
	src/Makefile)
