dnl Process this file with autoconf to produce a configure script

dnl ------------------------------------------------
dnl Initialization and Versioning
dnl ------------------------------------------------

AC_INIT(src/prs_server.c)
AM_INIT_AUTOMAKE(prs, 0.0.1)

AC_PROG_CC
AC_PROG_CPP

PKG_PROG_PKG_CONFIG


dnl --------------------------------------------------
dnl Check for libraries
dnl --------------------------------------------------

AC_CHECK_LIBM
AC_CHECK_LIB(pthread, pthread_create,
    pthread_LIBS="-lpthread"
  ,
    AC_MSG_ERROR(could not find the pthread library)
  )
PKG_CHECK_MODULES(vorbis, vorbis)
PKG_CHECK_MODULES(vorbisfile, vorbisfile)
PKG_CHECK_MODULES(libxml2, libxml-2.0)
PKG_CHECK_MODULES(shout, shout)
PKG_CHECK_MODULES(libcurl, libcurl)
PKG_CHECK_MODULES(taglib_c, taglib_c)
PKG_CHECK_MODULES(sqlite3, sqlite3)
PKG_CHECK_MODULES(alsa, alsa)

dnl --------------------------------------------------
dnl Do substitutions
dnl --------------------------------------------------

AC_SUBST(LIBS)
AC_SUBST(pthread_LIBS)
AC_SUBST(vorbis_CFLAGS)
AC_SUBST(vorbis_LIBS)
AC_SUBST(vorbisfile_CFLAGS)
AC_SUBST(vorbisfile_LIBS)
AC_SUBST(libxml2_CFLAGS)
AC_SUBST(libxml2_LIBS)
AC_SUBST(shout_CFLAGS)
AC_SUBST(shout_LIBS)
AC_SUBST(libcurl_CFLAGS)
AC_SUBST(libcurl_LIBS)
AC_SUBST(taglib_c_LIBS)
AC_SUBST(mysql_LIBS)
AC_SUBST(mysql_CFLAGS)

AC_OUTPUT(Makefile
	src/Makefile)
