dnl Process this file with autoconf to produce a configure script

dnl ------------------------------------------------
dnl Initialization and Versioning
dnl ------------------------------------------------

AC_INIT(ChangeLog)
AM_INIT_AUTOMAKE(prs, 0.1)

AC_PROG_CC
AC_PROG_CPP

AM_PROG_LIBTOOL


dnl --------------------------------------------------
dnl Check for libraries
dnl --------------------------------------------------

AC_CHECK_LIB(m, cos, LIBS="-lm")
AC_CHECK_LIB(vorbis, vorbis_block_init, LIBS="$LIBS -lvorbis")
AC_CHECK_LIB(vorbisfile, ov_open, LIBS="$LIBS -lvorbisfile")
AC_CHECK_LIB(xml2, xmlParseFile, LIBS="$LIBS -lxml2")
XML_CFLAGS=`xml2-config --cflags`
CFLAGS="$CFLAGS $XML_CFLAGS"
AC_CHECK_LIB(pthread, pthread_create, LIBS="$LIBS -lpthread")
AC_CHECK_LIB(mysqlclient, mysql_init, LIBS="$LIBS -lmysqlclient")
AC_CHECK_LIB(shout, shout_open, LIBS="$LIBS -lshout")
AC_CHECK_LIB(curl, curl_easy_init, LIBS="$LIBS -lcurl")
AC_CHECK_LIB(id3, ID3Tag_New, LIBS="$LIBS -lid3")


dnl --------------------------------------------------
dnl Do substitutions
dnl --------------------------------------------------

LIBS="$LIBS $pthread_lib $vorbis_libs"

AC_SUBST(LIBS)
AC_SUBST(pthread_lib)
AC_SUBST(vorbisfile_lib)

AC_OUTPUT(Makefile
	src/Makefile)
