bin_PROGRAMS = prs_db_builder prs_server

prs_db_builder_SOURCES = \
	db.c \
	fileinfo.c \
	mp3fileinfo.c \
	vorbisfileinfo.c \
	wavefileinfo.c \
	mp3decoder.c \
	mp3header.c \
	list.c	\
	debug.c \
	prs_db_builder.c

prs_server_SOURCES = \
	fileinfo.c \
	fileinfo.h \
	vorbisfileinfo.c \
	vorbisfileinfo.h \
	mp3fileinfo.c \
	mp3fileinfo.h \
	wavefileinfo.c \
	wavefileinfo.h \
	wave.h \
	db.c \
	db.h \
	list.c \
	list.h \
	prs.c \
	prs.h \
	prs_config.c \
	prs_config.h \
	mixer.c \
	mixer.h \
	mixerbus.c \
	mixerbus.h \
	mixeroutput.c \
	mixeroutput.h \
	ossmixeroutput.c \
	ossmixeroutput.h \
	soundcard.c \
	soundcard.h \
	shoutmixeroutput.c \
	shoutmixeroutput.h \
	filemixeroutput.c \
	filemixeroutput.h \
	mixerpatchpoint.c \
	mixerpatchpoint.h \
	resample.c \
	resample.h \
	mixerchannel.c \
	mixerchannel.h \
	vorbismixerchannel.c \
	vorbismixerchannel.h \
	mp3mixerchannel.c \
	mp3mixerchannel.h \
	mp3decoder.c \
	mp3decoder.h \
	mp3header.c \
	mp3header.h \
	ossmixerchannel.c \
	ossmixerchannel.h \
	urlmixerchannel.c \
	urlmixerchannel.h \
	wavemixerchannel.c \
	wavemixerchannel.h \
	audiofilter.c \
	audiofilter.h \
	audiocompressor.c \
	audiocompressor.h \
	multibandaudiocompressor.c \
	multibandaudiocompressor.h \
	mixerautomation.c \
	mixerautomation.h \
	logger.c \
	logger.h \
	scheduler.c \
	scheduler.h \
	debug.c \
	debug.h \
	prs_server.c
