bin_PROGRAMS = prs_db_builder prs_server prs_test

prs_db_builder_SOURCES = \
	db.c \
	fileinfo.c \
	list.c	\
	prs_db_builder.c

prs_server_SOURCES = \
	global_data.c \
	db.c \
	list.c \
	mixer.c \
	mixeroutput.c \
	ossmixeroutput.c \
	shoutmixeroutput.c \
	mixerchannel.c \
	vorbismixerchannel.c \
	ossmixerchannel.c \
	mixerautomation.c \
	scheduler.c \
	prs_server.c

prs_test_SOURCES = \
	test.c \
	list.c \
	db.c

