bin_PROGRAMS = prs_db_builder prs_server

prs_db_builder_SOURCES = \
	db.c \
	fileinfo.c \
	mp3fileinfo.c \
	vorbisfileinfo.c \
	mp3decoder.c \
	mp3tech.c \
	list.c	\
	prs_db_builder.c

prs_server_SOURCES = \
	global_data.c \
	db.c \
	list.c \
	prs_config.c \
	mixer.c \
	mixerbus.c \
	mixerbus.h \
	mixeroutput.c \
	ossmixeroutput.c \
	shoutmixeroutput.c \
	filemixeroutput.c \
	mixerchannel.c \
	vorbismixerchannel.c \
	mp3mixerchannel.c \
	mp3decoder.c \
	mp3tech.c \
	ossmixerchannel.c \
	audiofilter.c \
	audiocompressor.c \
	multibandaudiocompressor.c \
	mixerautomation.c \
	scheduler.c \
	prs_server.c

