bin_PROGRAMS = prs_db_builder prs_server

prs_db_builder_SOURCES = \
	db.c \
	fileinfo.c \
	mp3fileinfo.c \
	vorbisfileinfo.c \
	wavefileinfo.c \
	mp3decoder.c \
	mp3header.c \
	list.c	\
	debug.c \
	prs_db_builder.c

prs_server_SOURCES = \
	fileinfo.c \
	vorbisfileinfo.c \
	mp3fileinfo.c \
	db.c \
	list.c \
	prs.c \
	prs_config.c \
	mixer.c \
	mixerbus.c \
	mixerbus.h \
	mixeroutput.c \
	ossmixeroutput.c \
	soundcard.c \
	shoutmixeroutput.c \
	filemixeroutput.c \
	mixerpatchpoint.c \
	resample.c \
	mixerchannel.c \
	vorbismixerchannel.c \
	mp3mixerchannel.c \
	mp3decoder.c \
	mp3header.c \
	ossmixerchannel.c \
	urlmixerchannel.c \
	audiofilter.c \
	audiocompressor.c \
	multibandaudiocompressor.c \
	mixerautomation.c \
	logger.c \
	scheduler.c \
	debug.c \
	prs_server.c

